<resources>
    <string name="app_name">Seenow</string>
    <!--Strings used for LoginActivity-->
    <string name="LoginEmailHint">Enter your email</string>
    <string name="LoginPasswordHint">Enter your password</string>
    <string name="RegisterPasswordHint">Confirm your password</string>
    <string name="LoginNoAccount">No account yet? Create one!</string>
    <string name="forgotPassword">Forgot Password? Reset it!</string>
    <string name="LoginButton">Login</string>

    <!--Strings used for RegisterActivity-->
    <string name="RegisterBirthday">Enter your birthday</string>
    <string name="RegisterGenderFemale">Female</string>
    <string name="RegisterGenderMale">Male</string>
    <string name="RegisterCountryPicker">Please select your country</string>
    <string name="RegisterGenderSelect">Select your gender</string>
    <string name="RegisterButton">Submit</string>
    <string name="RegisterTakePicture">Before register you will have to take a picture of yourself!</string>
    <string name="RegisterNameHint">Enter your full name</string>
    <string name="RegisterAlreadyMember">Already a member!</string>

    <!--Strings used for CustomPagerAdapter-->
    <string name="Feed">Feed</string>
    <string name="Gallery">Gallery</string>
    <string name="Camera">Camera</string>


    <!--Strings used for CameraActivity-->
    <string name="ChoosePicture">Choose an existing picture</string>
    <string name="Or">OR</string>
    <string name="TakePicture">Take a new picture</string>
    <string name="Upload">Upload</string>
    <string name="PredictHint">If you know the person already write the name</string>
    <string name="select_visibility">Please select the visibility status of the image( v- visible, i- invisible)</string>
    <string name="Visibile">Visiblie</string>
    <string name="Invisible">Invisible</string>
    <string name="description_hint">Write the description of the image</string>

    <!--Strings for SettingsActivity-->
    <string name="changeEmail">Change mail address</string>
    <string name="changePassword">Change password</string>
    <string name="changeUseRecognizer">Do you want to use the Person Recognizer? </string>
    <string name="about">Write something about you</string>
    <string name="new_email">Enter your new email adress</string>
    <string name="ChangePassword_Inp">Enter your new password</string>
    <string name="currentPassword">Enter your current password</string>
    <string name="ConfChangePassword_Inp">Enter your new password</string>

    <!--Strings used for ProfileActivity-->
    <string name="PhotosTaken">Photos taken</string>
    <string name="PhotosAppereances">Appearances in photos</string>
    <string name="Points">Points</string>
    <string name="Friends">Friends</string>
    <string name="action_settings">Settings</string>
    <string name="toolbar_profile">Profile</string>

    <string-array name="nav_item_activity_titles">
        <item>Home</item>
        <item>New Post</item>
        <item>Profile</item>
        <item>Settings</item>
        <item>Logout</item>
    </string-array>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>

    <string name="action_mark_all_read">Mark All as Read</string>
    <string name="action_clear_all">Clear All</string>
    <string name="action_refresh">Refresh</string>



    <!-- Strings used for Navigation Menu-->
    <string name="Newpost">New post</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>


    <string name="facebook_app_id">1469938293084235</string>
    <string name="fb_login_protocol_scheme">fb1469938293084235</string>

</resources>
