<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="work.seenow.seenow.Fragments.SettingsFragment">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:theme="@android:style/Theme.Black.NoTitleBar.Fullscreen">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/ImageView"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="15dp"
                android:visibility="gone" />

            <EditText
                android:id="@+id/about"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/about"
                android:inputType="textPersonName" />

            <Button
                android:id="@+id/changemail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/changeEmail" />

            <Button
                android:id="@+id/changePassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/changePassword" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/changeUseRecognizer"
                android:layout_gravity="center"
                android:layout_centerHorizontal="true" />

            <Switch
                android:id="@+id/useRecognizer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:textOff="No"
                android:textOn="Yes"
                android:textColor="@color/black"/>

            <EditText
                android:id="@+id/new_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/new_email"
                android:inputType="textPersonName"
                android:visibility="invisible" />

            <EditText
                android:id="@+id/currentPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/currentPassword"
                android:visibility="invisible"
                android:inputType="textPassword" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/ChangePassword_Inp"
                android:visibility="invisible"
                android:inputType="textPassword" />

            <EditText
                android:id="@+id/password_confirmed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/ConfChangePassword_Inp"
                android:visibility="invisible"
                android:inputType="textPassword" />

            <Button
                android:id="@+id/submit_changes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Submit Changes" />

        </LinearLayout>


    </RelativeLayout>

</FrameLayout>