<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="work.seenow.seenow.Fragments.CameraFragment">

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:theme="@android:style/Theme.Black.NoTitleBar.Fullscreen"
    android:background="@drawable/gradient"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/ImageView"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:visibility="gone" />

        <Button
            android:id="@+id/ExistingPictureButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="@string/ChoosePicture" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:text="@string/Or" />

        <Button
            android:id="@+id/NewPictureButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/TakePicture" />

        <Button
            android:id="@+id/buttonUpload"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Upload"
            android:visibility="gone"/>

        <EditText
            android:id="@+id/predictLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text=""
            android:hint="@string/PredictHint"
            android:visibility="gone"/>
    </LinearLayout>


</RelativeLayout>

</FrameLayout>