<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/gradient"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight=".5"
            android:paddingTop="20dp">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:paddingStart="20dp"
                android:paddingTop="20dp"
                android:scaleType="centerCrop"
                android:src="@drawable/logo"
                tools:layout_editor_absoluteX="86dp" />
        </RelativeLayout>

        <EditText
            android:id="@+id/loginEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/LoginEmailHint"
            android:inputType="textEmailAddress"
            tools:layout_editor_absoluteX="84dp"
            tools:layout_editor_absoluteY="240dp" />

        <EditText
            android:id="@+id/activation_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:ems="10"
            android:hint="Enter the code"
            android:inputType="text"
            android:visibility="invisible"
            tools:layout_editor_absoluteX="84dp"
            tools:layout_editor_absoluteY="240dp" />

        <EditText
            android:id="@+id/loginPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:ems="10"
            android:hint="@string/LoginPasswordHint"
            android:inputType="textPassword"
            tools:layout_editor_absoluteX="85dp"
            tools:layout_editor_absoluteY="285dp" />

        <EditText
            android:id="@+id/loginPassword2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:ems="10"
            android:hint="@string/RegisterPasswordHint"
            android:inputType="textPassword"
            android:visibility="invisible"
            tools:layout_editor_absoluteX="85dp"
            tools:layout_editor_absoluteY="285dp" />

        <Button
            android:id="@+id/loginButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/LoginButton"
            tools:layout_editor_absoluteX="148dp"
            tools:layout_editor_absoluteY="372dp" />

        <com.facebook.login.widget.LoginButton
            android:id="@+id/login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp" />
        <Button
            android:id="@+id/loginNoAccountButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:text="@string/LoginNoAccount"
            tools:layout_editor_absoluteX="85dp"
            tools:layout_editor_absoluteY="494dp" />

        <Button
            android:id="@+id/forgotPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:background="@android:color/transparent"
            android:text="@string/forgotPassword"
            tools:layout_editor_absoluteX="85dp"
            tools:layout_editor_absoluteY="494dp" />

        <Button
            android:id="@+id/submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:text="Submit"
            android:visibility="invisible" />

    </LinearLayout>

</RelativeLayout>